# break-the-bot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: redteam.yml
attacks/seeds/: jailbreak.txt  pii_exfiltration.txt  prompt_injection.txt
baselines/: blocked.json
configs/: campaign.yaml
docs/: methodology.md
src/redteam/: __init__.py  __main__.py  cli.py  detectors.py  mutators.py  owasp.py  report.py  runner.py  schemas.py  target.py
tests/: test_redteam.py
